# pyopencl

./: .gitignore  .gitlab-ci.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
examples/: demo_array_svm.py
pyopencl/: __init__.py  _errors.py  array.py  invoker.py
src/: wrap_cl.hpp  wrap_cl_part_1.cpp  wrap_cl_part_2.cpp  wrap_constants.cpp  wrap_mempool.cpp
